--- a/src/Components/Pdf/Pdf.css
+++ b/src/Components/Pdf/Pdf.css
@@ -100,7 +100,7 @@
     margin-top: 1rem;
     position: fixed;
     top: 21rem;
-    width: 90%; 
+    width: 80%; 
 }
 
 .doubtInput input{
@@ -142,6 +142,13 @@
 @media (max-width: 515px) {
     .sections{
         width: 20rem;
+    }
+    .doubtInput{
+        margin-top: 1rem;
+        position: fixed;
+        top: 21rem;
+        left: 0.7rem;
+        width: 80%; 
     }
 }
 
